Add more checks for Appender creation
Also more add more tests